# mlops-iris-train-demo

./: .gitignore  Dockerfile  README.md  build.sh  buildspec.yml  pyproject.toml
cf/: cf-template.yml
src/: train
src/iris_train/: __init__.py  model.py  trainer.py
src/mlops_iris_train_demo/: train
src/mlops_iris_train_demo/iris_train/: trainer.py
workflow/: cf-template.yml
