[tool.poetry]
name = "mlops-iris-train-demo"
version = "0.1.0"
description = "Repo containing training code for an Iris classifier"
authors = ["Farid Delgado <delgado.farid@gmail.com>"]
license = "Apache-2.0 license"
packages = [
    { include = "mlops_iris_train_demo", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
